--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "app my gram",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx sequelize db:migrate"
+    "test": "cross-env NODE_ENV=test npx jest --runInBand --detectOpenHandles --forceExit --verbose",
+    "start": "npx sequelize db:migrate",
+    "db:create:test": "NODE_ENV=test npx sequelize db:create",
+    "db:migrate:test": "NODE_ENV=test npx sequelize db:migrate",
+    "db:migrate:test:undo" : "NODE_ENV=test npx sequelize db:migrate:undo:all"
   },
   "repository": {
     "type": "git",
@@ -20,13 +23,16 @@
   "homepage": "https://github.com/hacktiv8Kelompok3/FinalProject2#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "sequelize": "^6.32.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.1"
+    "sequelize-cli": "^6.6.1",
+    "supertest": "^6.3.3"
   }
 }
